samples/_failures_safe/1761450468_9931c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_845cd070.c: In function ‘main’:
./samples/SAFE/__tmp_845cd070.c:165:13: error: expected expression at end of input
  165 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_845cd070.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_845cd070.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_845cd070.c:165:13: error: expected declaration or statement at end of input
